# developer-agent

./: .env.example  .gitignore  README.md  client.py  jira_mcp_server.py  mcp_config.py  mcp_server.py  pyproject.toml
agent/: mcp_agent.py  sdlc_agent.py
api/: git_ops.py  main.py
frontend/developer-agent-ui/: index.html  package-lock.json  package.json
frontend/developer-agent-ui/src/: App.css  App.tsx
indexer/: cloner.py  embedder.py  parser.py  pipeline.py  searcher.py
